tests/ui/mismatched_types/recovered-block.stderr
error: missing `struct` for struct definition
  --> $DIR/recovered-block.rs:11:8
   |
LL |     pub Foo { text }
   |        ^
   |
help: add `struct` here to parse `Foo` as a public struct
   |
LL |     pub struct Foo { text }
   |         ++++++

error: aborting due to previous error

